Add compatibility with PHP 8.2+

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mailchimp/marketing",
+    "name": "wpify/mailchimp-marketing-php",
     "version": "3.0.80",
     "description": "",
     "keywords": [
